Fix spacing on landing page. Reformat index-dev.html Fix spacing on blue offers version

--- a/src/app/features/dashboard/offers/offers-blue/offers.component.scss
+++ b/src/app/features/dashboard/offers/offers-blue/offers.component.scss
@@ -620,10 +620,6 @@ a.box {
     padding-top: 40px;
     padding-bottom: 40px;
   }
-
-  .split-section:last-of-type {
-    margin-top: 40px;
-  }
 }
 @media (min-width: 600px) {
   /* .offers-grid {
