--- a/src/app/features/landing/landing.component.scss
+++ b/src/app/features/landing/landing.component.scss
@@ -35,7 +35,7 @@ p {
     margin-bottom: 40px;
     h4 {
       max-width: 250px;
-      margin: 25px auto 80px;
+      margin: 25px auto 40px;
     }
   }
 
